# ghconcat

./: .gitignore  LICENSE  README.md  README_ES.md  README_es.md  __init__.py  prompt.md  pyproject.toml  requirements.txt  setup.py
examples/: out.txt
examples/academic_pipeline/: README_es.md  academic_pipeline.gctx
examples/academic_pipeline/.ghconcat_urlcache/: scr_1_2303.11366.html  scr_2_2210.10255.html
examples/academic_pipeline/notes/: note_conference_summary_QIP2025.md  note_lab_log_2025-06-03.md  note_review_article_highlights.md
examples/academic_pipeline/prompts/: critic.md  editor.md
examples/odoo_vet_clinic/: README_ES.md  dev_pipeline.gctx
src/: __init__.py  a.py  ghconcat.py
src/ghconcat/: __init__.py  __main__.py  ai_client.py  cli.py  constants.py  directives.py  excel_reader.py  execution.py  flags.py  ghconcat.py  html_reader.py  parser.mpy2  parser.py  pdf_reader.py  py.typed  readers.py  tokenize.py  url_fetcher.py  walker.py
test-fixtures/: ai_parent.gctx  base.tpl  blank_ctx.gctx  dual.gctx  dup.gctx  empty.tpl  ia_template.txt  inline1.gctx  inline2.gctx  tmpfpi0r7yw.ai.txt  tmph4e7g2ru.ai.txt  tpl_env.md  x_js.gctx  x_py.gctx
test-fixtures/ai/: seeds.jsonl
test-fixtures/exclude_me/: ignored.py
test-fixtures/ws_tpl/: alt.tpl
tests/: test_ghconcat.py  test_interfaces_imports.py
tests/test-fixtures/: batch.gcx  batch1.gcx  batch2.gcx  batch3.gcx  batch_ws.gcx  dump.txt  ia_template.inputtxt  ia_template.txt  inline.gcx  inline1.gcx  inline2.gcx  inline3.gcx  inline_wrap.gcx
tests/tools/: build_fixtures.py  fixtures.sh
(+150 files in other folders)
