[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghconcat"
version = "0.9.0"
description = "Hierarchical, language-agnostic concatenation & templating tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "GAHEOS S.A." },
  { name = "Leonardo Gavidia Guerra", email = "lgavidia@gaheos.com" }
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.optional-dependencies]
html  = ["lxml>=5.0.0"]
pdf   = ["pypdf>=4.2.0", "pdf2image>=1.17.0", "pytesseract>=0.3.10"]
excel = ["pandas>=2.2.0"]
full  = [
  "lxml>=5.0.0",
  "pypdf>=4.2.0",
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
  "pandas>=2.2.0"
]

[project.scripts]
# Ejecutable de consola: `ghconcat`
ghconcat = "ghconcat.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ghconcat*"]